--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@
     outline: 0 !important;
     transition: all .35s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-body{ overflow-x: hidden;};
+body { 
+    overflow-x: hidden 
+};
 
 @layer utilities {
         .animation-delay-2000 {
