--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     outline: 0 !important;
     transition: all .35s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-body { 
+html,body { 
     overflow-x: hidden 
 };
 
